cmss/micro-campaign-custom-search/default/objects/CustomSearchConfiguration__c/CustomSearchConfiguration__c.object-meta.xml
<CustomObject>
    <label>Custom Search Configuration</label>
    <nameField>
        <label>CustomSearchConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Search Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>