cmss/micro-campaign-custom-search/default/objects/CustomSearchConfiguration__c/fields/FieldsetName__c.field-meta.xml
<CustomField>
    <fullName>FieldsetName__c</fullName>
    <label>Fieldset Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>