cmss/micro-campaign-custom-search/default/objects/CustomSearchConfiguration__c/fields/FilterCondition__c.field-meta.xml
<CustomField>
    <fullName>FilterCondition__c</fullName>
    <label>Filter Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>