cmss/micro-campaign-custom-search/default/objects/CustomSearchConfiguration__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ObjectType</valueSetName>
    </valueSet>
</CustomField>