cmss/micro-campaign-custom-search/default/objects/CustomSearchConfiguration__c/fields/OwnerFieldName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFieldName__c</fullName>
    <formula>IF( TEXT(ObjectType__c) = &apos;Asset&apos;, &apos;PortfolioMgmtA__c&apos;, &apos;PortfolioMngmtA__c&apos;)</formula>
    <label>Owner Filed Name</label>
    <type>Text</type>
</CustomField>