cmss/micro-campaign-custom-search/default/objects/CustomSearchConfiguration__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ObjectType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CustomSearchType</valueSetName>
    </valueSet>
</CustomField>